--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/Fonts/SourGummy-Regular SDF.asset
+Assets/Fonts/SourGummy-Regular SDF.asset
